add upload group with parallelism

--- a/pipeline-grouped.yml
+++ b/pipeline-grouped.yml
@@ -14,3 +14,11 @@ steps:
         command: buildkite-agent pipeline upload b.yml
       - label: Upload C
         command: buildkite-agent pipeline upload c.yml
+
+  - group: uploads parallelised
+    parallelism: 2
+    steps:
+      - label: Upload A
+        command: buildkite-agent pipeline upload a.yml
+      - label: Upload B
+        command: buildkite-agent pipeline upload b.yml
